--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,9 @@
 stages:
     - build
+    - build-image
+variables:
+  APP_NAME: python-flask-demo
+  DOCKER_HOST: tcp://docker:2375
 
 build:
     image: alpine
@@ -9,3 +13,21 @@ build:
     artifacts:
         paths:
             - index.html
+
+
+
+build-docker-image:
+    stage: build-image
+    image: 
+        name: amazon/aws-cli
+        entrypoint: [""]
+    services:
+        - docker:dind
+    before_script:
+        - amazon-linux-extras install docker
+        - aws --version
+        - docker --version
+    script:
+        - docker build -t $DOCKER_REGISTRY/$APP_NAME:$CI_PIPELINE_IID . 
+        - aws ecr get-login-password | docker login --username AWS --password-stdin $DOCKER_REGISTRY
+        - docker push $DOCKER_REGISTRY/$APP_NAME:$CI_PIPELINE_IID
