--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ variables:
     APP_NAME: "python-flask-demo"
     DOCKER_HOST: "tcp://docker:2375"
     DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_DRIVER: overlay2
 build:
     image: alpine
     stage: build
@@ -29,7 +30,6 @@ build-docker-image:
         - docker --version
 
     script:
-        - unset DOCKER_HOST
         - docker build -t $DOCKER_REGISTRY/$APP_NAME:$CI_PIPELINE_IID . 
         - aws ecr get-login-password | docker login --username AWS --password-stdin $DOCKER_REGISTRY
         - docker push $DOCKER_REGISTRY/$APP_NAME:$CI_PIPELINE_IID
